Refine item design
